ui: fix labels alignment and size on the landing page

--- a/invenio_rdm_records/theme/assets/semantic-ui/less/invenio_rdm_records/theme.less
+++ b/invenio_rdm_records/theme/assets/semantic-ui/less/invenio_rdm_records/theme.less
@@ -42,6 +42,10 @@
     color:#777;
 }
 
+.ui.label > .icon { //Overwrite default icon
+    margin: 0rem 0.25rem 0rem 0rem;
+}
+
 .label-keyword {
     color:#777;
     border: 2px solid rgba(119, 119, 119, 0.56);
@@ -71,11 +75,11 @@
     #collapse-stats {
         margin-top: 15px;
         margin-left: 10px;
-        font-size: 12px;
+        font-size: @font-size-small;
     }
 
     .stats-data {
-        font-size: 36px;
+        font-size: @font-size-massive;
     }
 }
 
