--- a/invenio_rdm_records/theme/assets/semantic-ui/less/invenio_rdm_records/variables.less
+++ b/invenio_rdm_records/theme/assets/semantic-ui/less/invenio_rdm_records/variables.less
@@ -12,3 +12,4 @@
 @font-size-base: 14px;
 @font-size-small: 12px;
 @font-size-tiny: 10px;
+@font-size-massive: 36px;
